--- a/yes.html
+++ b/yes.html
@@ -13,7 +13,7 @@
     <div class="cont">
         <h1>Yaaaaaay!!</h1>
         <div class="div"></div>
-        <div class="msg">(We are Boyfriend and Girlfriend now then?)</div>
+        <div class="msg">(We are Boyfriend and Girlfriend now.)</div>
     </div>
 </body>
 </html>
